--- a/courses/cs585/home/index.html
+++ b/courses/cs585/home/index.html
@@ -67,11 +67,11 @@
 
 <!-- ********************************************************************************************************** -->
 
-<br><img style="width:600px;; border:3px solid #777777; padding:6px; background:white;" src="pics/41LED_Feit.png">
+<br><img style="width:600px;; border:3px solid #777777; padding:6px; background:white;" src="pics/DroneArchitec.png">
 
-<br><img style="width:600px;; border:3px solid #777777; padding:6px; background:white;" src="pics/BlockGenAISeniorSE_5rdF.jpg">
+<br><img style="width:600px;; border:3px solid #777777; padding:6px; background:white;" src="pics/GE.png">
 
-<br><img style="width:600px;; border:3px solid #777777; padding:6px; background:white;" src="pics/VennJoke-6vd.png">
+<br><img style="width:600px;; border:3px solid #777777; padding:6px; background:white;" src="pics/YesSQL.jpg">
 
 <!-- ********************************************************************************************************** -->
 
