--- a/courses/cs585/extras/index.html
+++ b/courses/cs585/extras/index.html
@@ -114,6 +114,12 @@
 ###https://www.technologyreview.com/2025/07/28/1120747/chinese-universities-ai-use/
 <div style="height:1px;border:1px solid black;"> </div>
 
+###https://dataconomy.com/2025/07/28/meet-opal-googles-vibe-coding-ai-agent/
+<div style="height:1px;border:1px solid black;"> </div>
+
+###Qwen 3, Kimi K2, Z's GLM 4.5 [in add'n to DeepSeek's R1, Baidu's ERNIE, Tencent's Hunyuan, etc.]...
+<div style="height:1px;border:1px solid black;"> </div>
+
 <!-- ********************************** -->
 <br><br>
 </xmp >
