--- a/courses/cs571/home/index.html
+++ b/courses/cs571/home/index.html
@@ -74,9 +74,9 @@
 
 <!-- ********************************************************************************************** -->
 
-<br><img src="pics/ItalicPisa.jpg" style="width:500px; border:3px solid #777777; padding:6px; background:white;">
+<br><img src="pics/Andr.jpg" style="width:500px; border:3px solid #777777; padding:6px; background:white;">
 
-<br><img src="pics/jQ.jpg" style="width:500px; border:3px solid #777777; padding:6px; background:white;">
+<br><img src="pics/Bevis.webp" style="width:500px; border:3px solid #777777; padding:6px; background:white;">
 
 
 
